fixed issue with landing screen button overlapping text on small screens

--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
     /* background-image: url("assets/tim-mossholder-J0sMjGu6jvQ-unsplash.jpg"); */
     /* background-image: url("assets/backgrounds/Background_03.jpg"); */
     background-image: url("assets/backgrounds/Background_05.jpg");
-
+    
+    min-height: 520px;
     height: 100vh;
     background-size: cover;
 }
